@@ -84,6 +84,19 @@ this repository contains the full copyright notices and license terms. -->
             <field name="rule_group" ref="rule_group_statement"/>
         </record>
 
+        <record model="ir.action.report" id="report_statement">
+            <field name="name">Statement</field>
+            <field name="model">account.statement</field>
+            <field name="report_name">account.statement</field>
+            <field name="report">account_statement/statement.odt</field>
+            <field name="style">company/header_A4.odt</field>
+        </record>
+        <record model="ir.action.keyword" id="report_statement_keyword">
+            <field name="keyword">form_print</field>
+            <field name="model">account.statement,-1</field>
+            <field name="action" ref="report_statement"/>
+        </record>
+
         <record model="ir.ui.view" id="statement_line_view_form">
             <field name="model">account.statement.line</field>
             <field name="type">form</field>
