@@ -1,3 +1,4 @@
+* Add report to statement
 * Add number and sequence on statement line
 * Switch journal debit/credit account usage
 
